# starlightr

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _starlightr.toml  _starlightr.yaml  lefthook.yaml  render_reference.mdx  rproject.toml
R/: assets.R  audit.R  build_articles.R  build_reference_files.R  (+24 more)
src/rust/: Cargo.toml  document.rs  lib.rs
src/rust/parser/: Cargo.toml
src/rust/parser/src/: lib.rs
src/rust/parser/src/document/: code.rs  link.rs  list.rs  mod.rs  node.rs  sections.rs
src/rust/parser/src/emit/: mdx.rs  mod.rs  options.rs
src/rust/parser/src/emit/snapshots/: starlightr_parser__emit__mdx__tests__can_emit_rd_files@dplyr-storms.Rd.snap  starlightr_parser__emit__mdx__tests__can_emit_rd_files@hyperion-get-model-parameter-info.Rd.snap  starlightr_parser__emit__mdx__tests__can_emit_rd_files@hyperion-package.Rd.snap  starlightr_parser__emit__mdx__tests__can_emit_rd_files@hyperion-tables-section-rules.Rd.snap  starlightr_parser__emit__mdx__tests__can_emit_rd_files@scicalc-bmic.Rd.snap  starlightr_parser__emit__mdx__tests__can_emit_rd_files@scicalc-convert-alb.Rd.snap  starlightr_parser__emit__mdx__tests__can_emit_rd_files@scicalc-egfr.Rd.snap  (+24 more)
src/rust/parser/src/parsing/: lexer.rs  mod.rs  parser.rs  span.rs
src/rust/parser/test_data/: dplyr-storms.Rd  hyperion-get-model-parameter-info.Rd  hyperion-package.Rd  hyperion-tables-section-rules.Rd  scicalc-bmic.Rd  scicalc-convert-alb.Rd  scicalc-egfr.Rd  scicalc-hfc.Rd  starlightr-render-reference.Rd  test-enumerate.Rd
src/rust/src/: lib.rs
(+204 files in other folders)
