[package]
name = "starlightr-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
# R Integration (needed for extendr macros in modules)
extendr-api = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
fs-err = { workspace = true }
toml = { workspace = true }

# Testing and utilities
insta = { workspace = true }
tempfile = { workspace = true }
